
java_library(
    name = "resolver_lib",
    srcs = glob(["src/main/java/com/google/devtools/bazel/workspace/maven/*.java"]),
    runtime_deps = [
        "//others/migration-tooling:migration_tools___org_codehaus_plexus__plexus_interpolation",
        "//others/migration-tooling:migration_tools___org_codehaus_plexus__plexus_utils",
    ],
    deps = [
        "//others/migration-tooling:migration_tools___com_google_guava__guava",
        "//others/migration-tooling:migration_tools___com_google_code_findbugs__jsr305",
        "//others/migration-tooling:migration_tools___org_apache_commons__commons_lang3",

        "//others/migration-tooling:migration_tools___com_beust__jcommander",

        '//others/migration-tooling:migration_tools___org_apache_maven__maven_aether_provider',
        '//others/migration-tooling:migration_tools___org_apache_maven__maven_model',
        '//others/migration-tooling:migration_tools___org_apache_maven__maven_model_builder',
        '//others/migration-tooling:migration_tools___org_apache_maven__maven_repository_metadata',
        '//others/migration-tooling:migration_tools___org_apache_maven__maven_artifact',

        "//others/migration-tooling:migration_tools___org_apache_httpcomponents__httpclient",
        '//others/migration-tooling:migration_tools___org_apache_httpcomponents__httpcore',

        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_api',
        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_spi',
        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_connector_basic',
        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_transport_http',
        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_transport_classpath',
        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_transport_wagon',
        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_transport_file',
        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_impl',
        '//others/migration-tooling:migration_tools___org_eclipse_aether__aether_util',
        ],
)

java_library(
    name = "classifier_lib",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/*.java"]),
    runtime_deps = [],
    deps = [
        ":resolver_lib",
        "//others/migration-tooling:migration_tools___com_google_guava__guava",
        "//others/migration-tooling:migration_tools___com_google_code_findbugs__jsr305",
        "//others/migration-tooling:migration_tools___org_apache_commons__commons_lang3",
        ],
)

java_library(
    name = "writer_lib",
    srcs = glob(["src/main/java/com/google/devtools/bazel/workspace/output/*.java"]),
    runtime_deps = [],
    deps = [
        ":resolver_lib",
        ":classifier_lib",
        ":timing_lib",
        "//others/migration-tooling:migration_tools___com_google_guava__guava",
        "//others/migration-tooling:migration_tools___com_google_code_findbugs__jsr305",
        "//others/migration-tooling:migration_tools___org_apache_commons__commons_lang3",
        ],
)

java_library(
    name = "timing_lib",
    srcs = glob(["src/main/java/net/evendanan/timing/*.java"]),
    runtime_deps = [],
    deps = [
        "//others/migration-tooling:migration_tools___com_google_guava__guava",
        "//others/migration-tooling:migration_tools___com_google_code_findbugs__jsr305",
        "//others/migration-tooling:migration_tools___org_apache_commons__commons_lang3",
        ],
)

java_binary(
    name = "resolver",
    main_class = "com.google.devtools.bazel.workspace.GenerateWorkspace",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/java/com/google/devtools/bazel/workspace/*.java"]),
    deps = [
        ":resolver_lib",
        ":classifier_lib",
        ":writer_lib",
        ":timing_lib",
        "//others/migration-tooling:migration_tools___com_google_guava__guava",
        "//others/migration-tooling:migration_tools___com_google_code_findbugs__jsr305",
        "//others/migration-tooling:migration_tools___org_apache_commons__commons_lang3",

        "//others/migration-tooling:migration_tools___com_beust__jcommander",

        '//others/migration-tooling:migration_tools___org_apache_maven__maven_model',
        ],
)


java_test(name = "timing_data",
  deps=[":timing_lib", "//others/migration-tooling:migration_tools___junit__junit"],
  srcs=["src/main/javatest/net/evendanan/timing/TimingDataTest.java"],
  size="small",
  test_class = "net.evendanan.timing.TimingDataTest",
)

java_test(name = "timing_timer",
  deps=[":timing_lib", "//others/migration-tooling:migration_tools___junit__junit"],
  srcs=[
      "src/main/javatest/net/evendanan/timing/TaskTimingTest.java",
      "src/main/javatest/net/evendanan/timing/TimingDataTest.java"
        ],
  size="small",
  test_class = "net.evendanan.timing.TaskTimingTest",
)

java_test(name = "classifiers",
  deps=[
      ":classifier_lib",
      ":resolver_lib",
      "//others/migration-tooling:migration_tools___junit__junit",
       "//others/migration-tooling:migration_tools___org_mockito__mockito_core"
       ],
  srcs=["src/main/javatest/net/evendanan/bazel/mvn/RuleClassifiersTest.java"],
  resources = [
      "src/main/javatest/net/evendanan/bazel/mvn/resourses/dataenum-processor-1.0.2.jar",
      "src/main/javatest/net/evendanan/bazel/mvn/resourses/dataenum-1.0.2.jar"
   ],
  resource_strip_prefix = "others/migration-tooling/generate_workspace/src/main/javatest/net/evendanan/bazel/mvn/resourses/",
  size="small",
  test_class = "net.evendanan.bazel.mvn.RuleClassifiersTest",
)

java_test(name = "composite_formater",
  deps=[
      ":classifier_lib",
      ":resolver_lib",
      "//others/migration-tooling:migration_tools___junit__junit",
       "//others/migration-tooling:migration_tools___org_mockito__mockito_core"
       ],
  srcs=["src/main/javatest/net/evendanan/bazel/mvn/CompositeFormatterTest.java"],
  size="small",
  test_class = "net.evendanan.bazel.mvn.CompositeFormatterTest",
)

java_test(name = "real_formatters",
  deps=[
      ":classifier_lib",
      ":resolver_lib",
      "//others/migration-tooling:migration_tools___junit__junit",
       "//others/migration-tooling:migration_tools___org_mockito__mockito_core"
       ],
  srcs=["src/main/javatest/net/evendanan/bazel/mvn/FormattersTests.java"],
  size="small",
  test_class = "net.evendanan.bazel.mvn.FormattersTests",
)