java_library(
    name = "serialization",
    visibility=["//visibility:public"],
    srcs = [
        "Adapters.java",
        "Serialization.java"
        ],
    deps = [
        "//resolver:api_lib",
        "//resolver/main_deps/com/google/code/gson/gson"
        ]
)

java_test(name = "serialization_test",
  deps=[
        "//resolver:api_lib",
        ":serialization",

        "//resolver/main_deps/com/google/code/gson/gson",

        "//resolver/main_deps/junit/junit",
        '//resolver/main_deps/org/mockito/mockito-core',
       ],
  srcs=["SerializationTest.java"],
  size="small",
  test_class = "net.evendanan.bazel.mvn.serialization.SerializationTest",
)
